CollectedCookiesViews: don't show info for unfocused cookies

When the tab switches between allowed and blocked, cookie info
from the previous tab should no longer be shown.

BUG=649006

Review-Url: https://codereview.chromium.org/2361123002
Cr-Commit-Position: refs/heads/master@{#420693}

Former-commit-id: c6d0504e2b81609e816ed8f294cb09324efd41be